[gd_scene load_steps=6 format=3 uid="uid://cvqq628c8eb0i"]

[ext_resource type="PackedScene" uid="uid://u6wcxr54006s" path="res://BlenderMeshes/winterTree.fbx" id="1_wum78"]
[ext_resource type="Script" path="res://LevelAssets/winter_tree.gd" id="2_1dbdp"]
[ext_resource type="AudioStream" uid="uid://dbe13145xorgp" path="res://Audio/PP_Win_Stinger.wav" id="3_v3xvm"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_5dl84"]
data = PackedVector3Array(0, 0.0297, 0.0031, 0.0297, 0, 0.0031, 0, 0, 0.0314, 0.0297, 0, 0.0031, 0, -0.0297, 0.0031, 0, 0, 0.0314, 0, 0.0297, 0.0031, 0, -0.0297, 0.0031, 0.0297, 0, 0.0031, 0, 0.0297, 0.0031, -0.0297, 0, 0.0031, 0, -0.0297, 0.0031, 0, -0.0297, 0.0031, -0.0297, 0, 0.0031, 0, 0, 0.0314, -0.0297, 0, 0.0031, 0, 0.0297, 0.0031, 0, 0, 0.0314, -0.0244, 0, 0.0145, 0, 0.0244, 0.0145, 0, 0, 0.0414, 0, 0.0244, 0.0145, 0.0244, 0, 0.0145, 0, 0, 0.0414, 0.0244, 0, 0.0145, 0, 0.0244, 0.0145, -0.0244, 0, 0.0145, -0.0244, 0, 0.0145, 0, -0.0244, 0.0145, 0.0244, 0, 0.0145, 0.0244, 0, 0.0145, 0, -0.0244, 0.0145, 0, 0, 0.0414, 0, -0.0244, 0.0145, -0.0244, 0, 0.0145, 0, 0, 0.0414, 0.0162, 0, 0.0299, 0, -0.0162, 0.0299, 0, 0, 0.0453, 0, -0.0162, 0.0299, -0.0162, 0, 0.0299, 0, 0, 0.0453, 0, 0.0162, 0.0299, -0.0162, 0, 0.0299, 0.0162, 0, 0.0299, 0.0162, 0, 0.0299, -0.0162, 0, 0.0299, 0, -0.0162, 0.0299, -0.0162, 0, 0.0299, 0, 0.0162, 0.0299, 0, 0, 0.0453, 0, 0.0162, 0.0299, 0.0162, 0, 0.0299, 0, 0, 0.0453, 0.0087, 0.005, -0.01, 0, 0.01, -0.01, -0.0087, 0.005, -0.01, 0.0087, -0.005, -0.01, -0.0087, 0.005, -0.01, -0.0087, -0.005, -0.01, 0.0087, -0.005, -0.01, 0.0087, 0.005, -0.01, -0.0087, 0.005, -0.01, -0.0087, -0.005, -0.01, 0, -0.01, -0.01, 0.0087, -0.005, -0.01, -0.0087, 0.005, -0.01, 0, 0.01, -0.01, 0, 0.01, 0.01, 0, 0.01, 0.01, -0.0087, 0.005, 0.01, -0.0087, 0.005, -0.01, -0.0087, -0.005, -0.01, -0.0087, 0.005, -0.01, -0.0087, 0.005, 0.01, -0.0087, 0.005, 0.01, -0.0087, -0.005, 0.01, -0.0087, -0.005, -0.01, 0.0087, 0.005, 0.01, 0.0087, -0.005, 0.01, -0.0087, 0.005, 0.01, -0.0087, 0.005, 0.01, 0, 0.01, 0.01, 0.0087, 0.005, 0.01, 0.0087, -0.005, 0.01, -0.0087, -0.005, 0.01, -0.0087, 0.005, 0.01, 0, -0.01, 0.01, -0.0087, -0.005, 0.01, 0.0087, -0.005, 0.01, 0, -0.01, -0.01, -0.0087, -0.005, -0.01, -0.0087, -0.005, 0.01, -0.0087, -0.005, 0.01, 0, -0.01, 0.01, 0, -0.01, -0.01, 0.0087, -0.005, -0.01, 0, -0.01, -0.01, 0, -0.01, 0.01, 0, -0.01, 0.01, 0.0087, -0.005, 0.01, 0.0087, -0.005, -0.01, 0.0087, 0.005, -0.01, 0.0087, -0.005, -0.01, 0.0087, -0.005, 0.01, 0.0087, -0.005, 0.01, 0.0087, 0.005, 0.01, 0.0087, 0.005, -0.01, 0, 0.01, -0.01, 0.0087, 0.005, -0.01, 0.0087, 0.005, 0.01, 0.0087, 0.005, 0.01, 0, 0.01, 0.01, 0, 0.01, -0.01)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_07f6y"]
height = 2.35995
radius = 1.61606

[node name="winterTree" instance=ExtResource("1_wum78")]
script = ExtResource("2_1dbdp")
nextLevel = "res://Worlds/world2.tscn"

[node name="WinEffect" type="AudioStreamPlayer" parent="." index="0"]
stream = ExtResource("3_v3xvm")

[node name="StaticBody3D" type="StaticBody3D" parent="RootNode/Cylinder" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="RootNode/Cylinder/StaticBody3D" index="0"]
shape = SubResource("ConcavePolygonShape3D_5dl84")

[node name="Area3D" type="Area3D" parent="." index="2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.490588, 0)
shape = SubResource("CylinderShape3D_07f6y")

[connection signal="finished" from="WinEffect" to="." method="_on_win_effect_finished"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
